--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <div>
-<input type="radio">
+  <input type="radio" id="h" name="e"> <label for="e"> Hello </label>
 </div>
 </body>
 </html>
