--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <body>
   Hello World!
 <div>
-  <input type="radio" id="h" name="e"> <label for="e"> Hello </label>
+  <input type="radio" id="h" name="e"> <label for="h"> Hello </label>
 </div>
 </body>
 </html>
