--- a/test.html
+++ b/test.html
@@ -2,9 +2,18 @@
 <head>
 </head>
 <body>
-  Hello World!
+  Tickets:
+  
+  Special Offers:
 <div>
-  <input type="radio" id="h" name="e"> <label for="h"> Hello </label>
+  <input type="radio" id="2A3C" name="Offers"> <label for="h"> 2 Adults, 3 Children $41</label>
 </div>
+<div>
+  <input type="radio" id="2A2C" name="Offers"> <label for="h"> 2 Adults, 2 Children $38</label>
+</div>
+<div>
+  <input type="radio" id="2A1C" name="Offers"> <label for="h"> 2 Adults, 1 Child $30 </label>
+</div>
+  
 </body>
 </html>
