--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <style>
-    label {
+    label,body {
       font-family: sans-serif;
     }
   </style>
@@ -10,15 +10,18 @@
   Tickets:
   
   Special Offers:
-<div>
-  <input type="radio" id="2A3C" name="Offers"> <label for="h"> 2 Adults, 3 Children $41</label>
-</div>
-<div>
-  <input type="radio" id="2A2C" name="Offers"> <label for="h"> 2 Adults, 2 Children $38</label>
-</div>
-<div>
-  <input type="radio" id="2A1C" name="Offers"> <label for="h"> 2 Adults, 1 Child $30 </label>
-</div>
+  <div>
+    <input type="radio" id="2A3C" name="Offers"> <label for="2A3C"> 2 Adults, 3 Children $41</label>
+  </div>
+  <div>
+    <input type="radio" id="2A2C" name="Offers"> <label for="2A2C"> 2 Adults, 2 Children $38</label>
+  </div>
+  <div>
+    <input type="radio" id="2A1C" name="Offers"> <label for="2A1C"> 2 Adults, 1 Child $30 </label>
+  </div>
   
+  Custom Selection
+  
+  <input type="number" id="adult" > <label for="adult"> Adults</label>
 </body>
 </html>
