--- a/test.html
+++ b/test.html
@@ -3,11 +3,22 @@
   <style>
     label,body {
       font-family: sans-serif;
+      color: white;
     }
+    
+    body {
+      background-color: mediumseagreen;
+    }
+    .ticketMain {
+      background-color: grey;
+    }
+    
   </style>
 </head>
 <body>
-  Tickets:
+  <div>
+    Tickets:
+  </div>
   
   Special Offers:
   <div>
