--- a/test.html
+++ b/test.html
@@ -11,8 +11,12 @@
     }
     .ticketMain {
       background-color: grey;
+      height: 80px;
+      width: 150px;
+      margin-bottom: 70px;
+      text-align: center;
     }
-    .offer {
+    .sep {
       border-bottom-style: solid;
     }
     
@@ -23,7 +27,7 @@
     Tickets:
   </div>
   <div class="offers">
-    <h2 class="offer">Family Offers: </h2>
+    <h2 class="sep">Family Offers: </h2>
     <div>
       <input type="radio" id="2A3C" name="Offers"> <label for="2A3C"> 2 Adults, 3 Children $45</label>
     </div>
@@ -34,8 +38,9 @@
       <input type="radio" id="2A1C" name="Offers"> <label for="2A1C"> 2 Adults, 1 Child $30 </label>
     </div>
   </div>
-  Custom Selection
-  
+  <h2 class=“sep”>
+    Custom Selection
+  </h2>
   <input type="number" id="adult" > <label for="adult"> Adults</label>
 </body>
 </html>
