--- a/test.html
+++ b/test.html
@@ -19,7 +19,9 @@
     .sep {
       border-bottom-style: solid;
     }
-    
+    .adult {
+      background-color: seagreen;
+    }
   </style>
 </head>
 <body> 
@@ -41,6 +43,12 @@
   <h2 class=“sep”>
     Custom Selection
   </h2>
-  <input type="number" id="adult" > <label for="adult"> Adults</label>
+  <script>
+  </script>
+  <div class=“adult”>
+    <label> 
+      Adults <p>0 </p> <div>+ </div> <div>-</div>
+    </label>
+  </div>
 </body>
 </html>
