--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
   <script>
     $(button#aPlus).on(click, function(event) {
       $(#acwv).html("1")
+      alert($(#acwv).html())
     }
   </script>
   <style>
