--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
-    $(button#aPlus).on(click, function(event) {
+    $(.aPlus).on(click, function(event) {
       $(#acwv).html("1")
       alert($(#acwv).html())
     }
@@ -67,7 +67,7 @@
   
     <div class="adult"> 
       Adults: <label id=“avcw> 0 </label>
-      <div class=“buttons”> <button id="aPlus">+ </button> <button id="aMinus">- </button> </div>
+      <div class=“buttons”> <button class="aPlus">+ </button> <button id="aMinus">- </button> </div>
     </div> 
    
   
