--- a/test.html
+++ b/test.html
@@ -38,10 +38,10 @@
       text-align: left;
     }
     .number {
-      border: 2px solid #2E8BB5
+      border: 2px solid #2E8BB5;
     }
     .buttons {
-      padding: 0px 0px 60px 0px
+      padding: 0px 0px 60px 0px;
       text-align: right;
       background-color: green;
     }
