--- a/test.html
+++ b/test.html
@@ -4,11 +4,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
     function a(event) {
-      $(#acwv).html("1")
-      alert($(#acwv).html())
+      $("#acwv").html("1")
+      alert($("#acwv").html())
     }
     
-    $(.aPlus).on(click,a) 
+    $(".aPlus").on("click",a) 
   </script>
   <style>
     label,body {
