--- a/test.html
+++ b/test.html
@@ -4,8 +4,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
     function a(event) {
-      $(".acwv").html("1")
-      alert($(".acwv").html())
+      $(".acwv").text("1")
+      alert($(".acwv").text())
     }
     
     $(".aPlus").on("click",a) 
