--- a/test.html
+++ b/test.html
@@ -4,8 +4,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
     function a(event) {
-      $(".acwv").text("1")
-      alert($(".acwv").text())
+      $(".acwv").html("1")
+      alert($(".acwv").html())
     }
     
     $(".aPlus").on("click",a) 
@@ -68,7 +68,7 @@
   </h2>
   
     <div class="adult"> 
-      Adults: <label class=“avcw"> 0 </label>
+      Adults: <label class=avcw> 0 </label>
       <div class=“buttons”> <button class="aPlus" >+ </button> <button id="aMinus" onclick="a()">- </button> </div>
     </div> 
    
