--- a/test.html
+++ b/test.html
@@ -68,7 +68,7 @@
   </h2>
   
     <div class="adult"> 
-      Adults: <label class=avcw> 0 </label>
+      Adults: <span class=avcw> 0 </span>
       <div class=“buttons”> <button class="aPlus" >+ </button> <button id="aMinus" onclick="a()">- </button> </div>
     </div> 
    
