--- a/test.html
+++ b/test.html
@@ -55,11 +55,11 @@
   </style>
 </head>
 <body> 
-  <div class="ticketMain">
+  <div class=ticketMain>
     Tickets:
   </div>
-  <div class="offers">
-    <h2 class="sep">Family Offers: </h2>
+  <div class=offer>
+    <h2 class=sep>Family Offers: </h2>
     <div>
       <input type="radio" id="2A3C" name="Offers"> <label for="2A3C"> 2 Adults, 3 Children $45</label>
     </div>
@@ -70,13 +70,13 @@
       <input type="radio" id="2A1C" name="Offers"> <label for="2A1C"> 2 Adults, 1 Child $30 </label>
     </div>
   </div>
-  <h2 class=“sep”>
+  <h2 class=sep>
     Custom Selection
   </h2>
   
     <div class="adult"> 
       Adults: <span class=aDult> 0 </span>
-      <div class=“buttons”> <button class="aPlus" >+ </button> <button id="aMinus" onclick="a()">- </button> </div>
+      <div class=buttons> <button class=aPlus >+ </button> <button id=aMinus onclick="a()">- </button> </div>
     </div> 
    
   
