--- a/test.html
+++ b/test.html
@@ -3,19 +3,22 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
-    let total = 0
-    function updateTotal(val){
-      total += val
-    }
-    function changeValue(output,val){
-     let a = Number(output.text())
-      a += val
-      output.text(a.toString())
-    }
-    $(".aPlus").on("click", function () {
-      changeValue($(".aDult"),1)
-    }) 
+    $(window).on("load", function() {
+      let total = 0
+      function updateTotal(val){
+        total += val
+      }
+      function changeValue(output,val){
+       let a = Number(output.text())
+        a += val
+        output.text(a.toString())
+      }
+      $(".aPlus").on("click", function () {
+        changeValue($(".aDult"),1)
+      }) 
     
+    });
+
   </script>
   <style>
     label,body {
