--- a/test.html
+++ b/test.html
@@ -109,14 +109,19 @@
       width: 400px;
     }
     .ticketMain {
-      background-color: grey;
+      background-color: darkolivegreen;
       height: 80px;
       width: 120px;
       margin-bottom: 70px;
       text-align: center;
+      border: 4px solid seagreen;
+      border-radius: 10px;
     }
     .sep {
       border-bottom-style: solid;
+    }
+    button {
+      background-color: grey;
     }
     .adult {
       border: 6px solid rgb(0,120,50);
