--- a/test.html
+++ b/test.html
@@ -121,7 +121,7 @@
       border-bottom-style: solid;
     }
     button {
-      background-color: grey;
+      background-color: white;
     }
     .adult {
       border: 6px solid rgb(0,120,50);
@@ -173,6 +173,10 @@
       width: 120px;
       height: 40px;
     }
+    .credits {
+      font-size: 6px;
+      color: white;
+    }
   </style>
 </head>
 <body> 
@@ -218,5 +222,6 @@
 
   <br>
   <button id="finalise" class=finalise>Buy</button>
+  <p class=credits> made by arockidk </p>
 </body>
 </html>
