--- a/test.html
+++ b/test.html
@@ -105,7 +105,7 @@
     }
 
     body {
-      background-color: mediumseagreen;
+      background-color: white;
       width: 400px;
     }
     .ticketMain {
@@ -180,9 +180,9 @@
   </style>
 </head>
 <body> 
-  <div class=ticketMain>
+<!--  <div class=ticketMain>
     Tickets:
-  </div>
+  </div> -->
   <div class=offer>
     <h2 class=sep>Family Offers: </h2>
     <div>
