--- a/test.html
+++ b/test.html
@@ -105,7 +105,7 @@
     }
 
     body {
-      background-color: white;
+      background-color: seagreen;
       width: 400px;
     }
     .ticketMain {
@@ -221,7 +221,7 @@
     <br>
 
   <br>
-  <button id="finalise" class=finalise>Buy</button>
+  <a href=""> <button id="finalise" class=finalise>Buy</button> </a>
   <p class=credits> made by arockidk </p>
 </body>
 </html>
