--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="main.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script>
-            var onae = false
+            /*var onae = false
             const url = 'https://script.google.com/macros/s/AKfycbyVwl-yx66vFe6ofFUZ_OKkMOeu-juM6ZOFX_GYSXSQfqPcgIdLnTPOdRKjOF_DDjtI7A/exec'
             var toggle = false
             async function get(url='https://google.com',params={},type='GET') {
@@ -56,13 +56,13 @@
                         console.log(res)
                     })
                 })
-            })
+            })*/
         </script>
         <meta charset="UTF-8">
         <title>Welcome!</title>
     </head>
     <body>
-        <h1 style="padding: 50px; ">
+        <!--<h1 style="padding: 50px; ">
             e
         </h1>
         <div class='main'>
@@ -95,7 +95,7 @@
             <p class="a">
                 Email
             </p>
-            <input type="email" name class="a" id = 'mail'>
+            <input type="email" name class="a" id = 'mail'> -->
         </div>
 
     </body>
