--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
             </p>
             <input type="email" name class="a" id = 'mail'> -->
         </div>
-
+    <a href="https://arockidk.github.io/auction.html">Auctions</a>
     </body>
 </html>
