--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     document.getElementById('password').type = onae? 'text' : 'password'
                 })
                 $('#toggle').on('click',function(){
-                    /*if (toggle == false){
+                    if (toggle == false){
                         $('.main').css('visibility','hidden')
                         
                     }else{
                         $('.main').css('visibility','visible')
                     }
-                    toggle = !toggle*/
+                    toggle = !toggle
                     get(
                         url,
                         {
