--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css">
+        <style>
+            a {color: white; text-decoration:none;}
+            
+        </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script>
             /*var onae = false
